# yaflight

./: CMakeLists.txt  PRE_INSTALL_INFO.txt  README.md  aircraft.cpp  aircraft.h  aircraftdetailsdialog.cpp  aircraftdetailsdialog.h  aircraftdetailsdialog.ui  airport.cpp  airport.h  airportidx.cpp  airportidx.h  appsettings.cpp  appsettings.h  apt_dat.cpp  apt_dat.h  bootstrap.sh  configuration.cpp  configuration.h  cuteexpander.cpp  cuteexpander.h  cuteexpander.ui  cyaflight.pro  dialogappsettings.cpp  dialogappsettings.h  dialogappsettings.ui  dialogmpdetails.cpp  dialogmpdetails.h  dialogmpdetails.ui  dlgaircraftdetails.cpp  dlgaircraftdetails.h  dlgaircraftdetails.ui  fgenvironment.cpp  fgenvironment.h  helpdialog.cpp  helpdialog.h  helpdialog.ui  imagepreview.cpp  imagepreview.h  logger.cpp  (+30 more)
.github/workflows/: ccpp.yml
icons/: yaflight.icns
languages/: cs_CZ.ts  de_DE.ts  es_ES.ts  fr_FR.ts  it_IT.ts  ru_RU.ts  zh_CN.ts  zh_TW.ts
themes/: dark-theme.qss  default.qss
